--- a/Notes/OSSummer2011/eventselection.tex
+++ b/Notes/OSSummer2011/eventselection.tex
@@ -77,11 +77,7 @@ intgrated luminosity of up to 1~fb$^{-1}$.
 \subsubsection{2010 signal region}
 For reference we keep the signal region used in 2010. It is defined by
 tightening both $\HT$ and \MET from the preselection region
-\begin{itemize}
-\item A $\HT>350$~GeV.
-\item A $\MET>150$~GeV.
-\end{itemize}
-
+to $\HT>350$~GeV and $\MET>150$~GeV.
 
 \begin{figure}[hbtp]
   \subfigure[]{\label{fig:MET2010}\includegraphics[width=0.79\textwidth]{Summer11_07_MC_pfLeptSusyCuts_Data_MET_2010.pdf}}\hfill
@@ -91,6 +87,8 @@ tightening both $\HT$ and \MET from the preselection region
 The \MET distribution after application of the \HT
 cut is shown in Fig~\ref{fig:MET2010} and
 the yield split by flavour for a cut at 150~GeV is listed in Tab.~\ref{tab:2010}.
+It is seen that the yield in simulation is higher
+than in the data for this selection.
 
 \begin{table}[htb]
 \begin{center}
@@ -120,20 +118,18 @@ Data  & 3 & 3 & 4 & 10 \\
 \subsubsection{High \HT signal region}
 
 A signal region with high \HT is defined by tightening the $\HT$ 
-from the preselection region
-\begin{itemize}
-\item A $\HT>600$~GeV.
-\item A $\MET>100$~GeV.
-\end{itemize}
+from the preselection region to $\HT>600$~GeV and $\MET>100$~GeV.
 
 \begin{figure}[hbtp]
-  \subfigure[]{\label{fig:METHighHT}\includegraphics[width=0.79\textwidth]{Summer11_07_MC_pfLeptSusyCuts_Data_MET_HighMET.pdf}}\hfill
+  \subfigure[]{\label{fig:METHighHT}\includegraphics[width=0.79\textwidth]{Summer11_07_MC_pfLeptSusyCuts_Data_MET_HighHT.pdf}}\hfill
   \caption{\MET distribution for all events passing di-lepton selection and satisfy $\HT> 600$~GeV. For the final \MET selection (100)~GeV the selection is dominated by $t\bar{t}$.}
 \end{figure}
 
 The \MET distribution after application of the \HT
 cut is shown in Fig~\ref{fig:METHighHT} and
-the yield split by flavour for a cut at 150~GeV is listed in Tab.~\ref{tab:HighHT}.
+the yield split by flavour for a cut at 100~GeV is listed in Tab.~\ref{tab:HighHT}.
+It is seen that the yield in the data is lower than expected
+from the simulation.
 
 \begin{table}[htb]
 \begin{center}
@@ -165,19 +161,18 @@ Data  & 2 & 0 & 2 & 4 \\
 
 A signal region with high \MET is defined by slightly tightening the $\HT$ 
 and a much tighter $\MET$ selection compared to the pre-selection region
-\begin{itemize}
-\item A $\HT>250$~GeV.
-\item A $\MET>250$~GeV.
-\end{itemize}
+to $\HT>250$~GeV and $\MET>250$~GeV.
 
 \begin{figure}[hbtp]
-  \subfigure[]{\label{fig:METHighHT}\includegraphics[width=0.79\textwidth]{Summer11_07_MC_pfLeptSusyCuts_Data_MET_HighHT.pdf}}\hfill
+  \subfigure[]{\label{fig:METHighHT}\includegraphics[width=0.79\textwidth]{Summer11_07_MC_pfLeptSusyCuts_Data_MET_HighMET.pdf}}\hfill
   \caption{\MET distribution for all events passing di-lepton selection and satisfy $\HT> 250$~GeV. For the final \MET selection (250)~GeV the selection is dominated by $t\bar{t}$.}
 \end{figure}
 
 The \MET distribution after application of the \HT
 cut is shown in Fig~\ref{fig:METHighHT} and
 the yield split by flavour for a cut at 250~GeV is listed in Tab.~\ref{tab:HighMET}.
+It is seen that the yield in data is higher compared 
+to simulation for this signal region.
 
 \begin{table}[htb]
 \begin{center}
