--- a/Notes/OSSummer2011/results.tex
+++ b/Notes/OSSummer2011/results.tex
@@ -9,23 +9,21 @@ observation is seen.
 \begin{center}
 \caption{\label{tab:predict2010}Number of predicted and observed events in the 2010 signal region, 
     defined as: $H_T > 350$~GeV and $\met > 150$~GeV.}
-\begin{tabular}{l|cc}
+\begin{tabular}{l|ccc|c}
 \hline
-                       & \multicolumn{2}{c}{2010 signal region}               \\
+                       & \multicolumn{4}{c}{2010 signal region}               \\
 \hline 
-Process                & $ee$          & $\mu\mu$        \\
+Process                & $ee$          & $\mu\mu$ &  $e\mu$   & $ee+\mu\mu$   \\
 \hline
-$t\bar{t}$ from $e\mu$ & $11.7\pm 2.4$ & $13.4\pm 2.8$   \\
-Fake leptons           & $0.5\pm 0.3$  & $0.4\pm0.2$                  \\
+Prediction from $e\mu$ & $1.8 {}_{-0.8}^{+1.4}$ &  $2.3 {}_{-1.1}^{+1.8}$ & - & $4 {}_{-1.9}^{+3.2}$   \\
+Prediction for $Z \rightarrow ll$ & small & small & - & $0.042 \pm 0.021$   \\
+Fake leptons           &  to  & be & added & - \\                  
 \hline
-Total predicted        & $12.2\pm 2.4$ & $13.8 \pm 2.8$  \\
+Total predicted        & $1.8 {}_{-0.8}^{+1.4}$ &  $2.3 {}_{-1.1}^{+1.8}$ & - & $4 {}_{-1.9}^{+3.2}$  \\
 \hline\hline
-Total observed         & $10$          & $15$          \\
+Total observed         & 3          & 3 & 4 & 6         \\
 \hline \hline
-SM MC         & $8.4\pm 0.2$  & $10.5 \pm 0.3$    \\
-LM0                    &  $3.7\pm0.2$  & $4.2\pm0.2$     \\
-LM1                    &  $0.5\pm0.1$  & $0.7\pm0.1$     \\
-
+SM MC         &$3.44 \pm 2.25$&$4.26 \pm 2.26$&$7.46 \pm 2.3$ & $15.17 \pm 0.98$  \\
 \hline
 \end{tabular}
 \end{center}
@@ -41,63 +39,60 @@ and observation.
 \begin{center}
 \caption{\label{tab:predictHighMET}Number of predicted and observed events in the high \MET signal region, 
     defined as: $H_T > 250$~GeV and $\met > 250$~GeV.}
-\begin{tabular}{l|cc}
+\begin{tabular}{l|ccc|c}
 \hline
-                       & \multicolumn{2}{c}{High \MET Region}               \\
+                       & \multicolumn{4}{c}{High \MET signal region}               \\
 \hline 
-Process                & $ee$          & $\mu\mu$        \\
+Process                & $ee$          & $\mu\mu$ &  $e\mu$   & $ee+\mu\mu$   \\
 \hline
-$t\bar{t}$ from $e\mu$ & $11.7\pm 2.4$ & $13.4\pm 2.8$   \\
-Fake leptons           & $0.5\pm 0.3$  & $0.4\pm0.2$                  \\
+Prediction from $e\mu$ & $1.3 {}_{-0.7}^{+1.3}$ &  $1.7 {}_{-0.9}^{+1.7}$ & - & $3 {}_{-1.6}^{+3.0}$   \\
+Prediction for $Z \rightarrow ll$ & small & small & - & $< 0.064$   \\
+Fake leptons           &  to  & be & added & - \\                  
 \hline
-Total predicted        & $12.2\pm 2.4$ & $13.8 \pm 2.8$  \\
+Total predicted & $1.3 {}_{-0.7}^{+1.3}$ &  $1.7 {}_{-0.9}^{+1.7}$ & - & $3 {}_{-1.6}^{+3.0}$   \\
 \hline\hline
-Total observed         & $10$          & $15$          \\
+Total observed & 3 & 0 & 3 & 3        \\
 \hline \hline
-SM MC         & $8.4\pm 0.2$  & $10.5 \pm 0.3$    \\
-LM0                    &  $3.7\pm0.2$  & $4.2\pm0.2$     \\
-LM1                    &  $0.5\pm0.1$  & $0.7\pm0.1$     \\
-
+SM MC         &$0.4 \pm 2.22$&$1.0 \pm 2.22$&$1.68 \pm 2.23$&$3.08 \pm 0.56$  \\
 \hline
 \end{tabular}
 \end{center}
 \end{table}
 
-Tab.~\ref{tab:predictHighMET} compares the yields and the background predictions
+Tab.~\ref{tab:predictHighHT} compares the yields and the background predictions
 from the three background prediction methods for the signal region defined by a tight
 \HT selection. A good agreement between prediction and observation can be seen.
 
 \begin{table}[hbt]
 \begin{center}
-\caption{\label{tab:predictHighMET}Number of predicted and observed events in the high \HT signal region, 
+\caption{\label{tab:predictHighHT}Number of predicted and observed events in the high \HT signal region, 
     defined as: $H_T > 600$~GeV and $\met > 100$~GeV.}
-\begin{tabular}{l|cc}
+\begin{tabular}{l|ccc|c}
 \hline
-                       & \multicolumn{2}{c}{High \HT region}               \\
+                       & \multicolumn{4}{c}{High \HT signal region}               \\
 \hline 
-Process                & $ee$          & $\mu\mu$        \\
+Process                & $ee$          & $\mu\mu$ &  $e\mu$   & $ee+\mu\mu$   \\
 \hline
-$t\bar{t}$ from $e\mu$ & $11.7\pm 2.4$ & $13.4\pm 2.8$   \\
-Fake leptons           & $0.5\pm 0.3$  & $0.4\pm0.2$                  \\
+Prediction from $e\mu$ & $0.9 {}_{-0.6}^{+1.2}$ &  $1.1 {}_{-0.7}^{+1.1}$ & - & $2 {}_{-1.3}^{+2.7}$   \\
+Prediction for $Z \rightarrow ll$ & small & small & - & $0.038 \pm 0.019$   \\
+Fake leptons           &  to  & be & added & - \\                  
 \hline
-Total predicted        & $12.2\pm 2.4$ & $13.8 \pm 2.8$  \\
+Total predicted        & $0.9 {}_{-0.6}^{+1.2}$ &  $1.1 {}_{-0.7}^{+1.1}$ & - & $2 {}_{-1.3}^{+2.7}$  \\
 \hline\hline
-Total observed         & $10$          & $15$          \\
+Total observed & 2 & 0 & 2 & 2         \\
 \hline \hline
-SM MC         & $8.4\pm 0.2$  & $10.5 \pm 0.3$    \\
-LM0                    &  $3.7\pm0.2$  & $4.2\pm0.2$     \\
-LM1                    &  $0.5\pm0.1$  & $0.7\pm0.1$     \\
-
+SM MC         &$1.19 \pm 1.8$&$1.69 \pm 2.23$&$2.7 \pm 2.25$&$5.58 \pm 3.22$  \\
 \hline
 \end{tabular}
 \end{center}
 \end{table}
 
-
-We find one event in the signal region in the $e\mu$-lepton combination with a fake prediction
-of $0.1\pm0.1$, and thus predict $0.9 {}_{-0.8}^{+2.2}$ same-flavour events.
-In data we find no same-flavour events and have to contrast this with $7.3\pm1.6$ and ($3.6\pm0.7$) expected
-events at the benchmark points LM0 (LM1).
+We find in no signal region any significant excess of same flavour oposite
+sign lepton pair events.
+%We find one event in the signal region in the $e\mu$-lepton combination with a fake prediction
+%of $0.1\pm0.1$, and thus predict $0.9 {}_{-0.8}^{+2.2}$ same-flavour events.
+%In data we find no same-flavour events and have to contrast this with $7.3\pm1.6$ and ($3.6\pm0.7$) expected
+%events at the benchmark points LM0 (LM1).
 
 
 
