--- a/Notes/OSSummer2011/signal.tex
+++ b/Notes/OSSummer2011/signal.tex
@@ -12,17 +12,19 @@ leading to several hard jets (at least two).
 The escaping neutralino leads to missing transverse energy. 
 This fact allows to define a search region to observe an excess over the SM 
 and is used as main event selection as described in Section~\ref{sec:eventselection}.
-It consits of
+
+Our signal region are defined as follows
 \begin{itemize}
-\item Two opposite sign same flavour leptons within acceptance of $p_T>10$~GeV
-\footnote{In the first version of the note the lepton $p_T$ cut was at 5~GeV, which gives a better
-sensitivity to low mass mSugra. The electrons are not fully commissioned to 5~GeV and since there
-was no excess observed, we took an conservative approach to raise the threshold for this year and to continue
-commissioning the electron identification at low $p_T$, such that we can use low $p_T$ thresholds in the next year.}
-and  $|\eta|<2.4$.
-\item High $\HT>350~GeV$ with at least to jets to be as model independent as possible.
-\item High $\MET>150~GeV$, which is set as such that we expect roughly one di-leptonic $t\bar{t}$ event in this years dataset.
+\item Two isolated opposite sign same flavour leptons within acceptance of $p_{T,1}>20$~GeV and $p_{T,2}>10$~GeV.
+\item The preselection region requires in addtion \HT > 100~GeV, $\MET>100$~GeV
+\item The 2010 signal region \HT > 350~GeV, $\MET>150$~GeV
+\item We define a high \HT signal region \HT > 600~GeV, $\MET>100$~GeV
+\item We define a high \MET signal region \HT > 250~GeV, $\MET>250$~GeV
 \end{itemize}
+
+This definition is based on our prejudice of heavy objects
+being pair produced decaying subsequently through a cascade
+including an opposite sign lepton pair.
 
 %\begin{figure}[hbtp]
 %\begin{center}
@@ -34,12 +36,12 @@ and  $|\eta|<2.4$.
 %    this is the distinction that is made on detector level.\label{fig:yieldByChannelAndBMPoint}}
 %\end{figure}
 
-The number of expected events in a given di-lepton channel varies with the mSUGRA point realised by nature. 
+%The number of expected events in a given di-lepton channel varies with the mSUGRA point realised by nature. 
 %Thus, itsimportance cannot be judged from a single point in mSUGRA phase-space. 
-A range of benchmark points has been studied to anticipate different possible signal constellations and not
-tune towards a specific set of parameters. 
-Figure~\ref{fig:yieldByChannelAndBMPoint} shows the fraction of di-leptonic events splitted by flavour
-for a di-lepton selection on generator level. In all studied benchmark points
-the flavour correlated production dominates over the uncorrelated production.
+%A range of benchmark points has been studied to anticipate different possible signal constellations and not
+%tune towards a specific set of parameters. 
+%Figure~\ref{fig:yieldByChannelAndBMPoint} shows the fraction of di-leptonic events splitted by flavour
+%for a di-lepton selection on generator level. In all studied benchmark points
+%the flavour correlated production dominates over the uncorrelated production.
 
 
