--- a/Notes/OSSummer2011/significance.tex
+++ b/Notes/OSSummer2011/significance.tex
@@ -1,30 +1,30 @@
 \section{Limit}\label{sec:significance}
 
-As discussed in Section~\ref{sec:results}, we see no event 
-in the signal region, defined as $H_T>$350~GeV and 
-$\MET>150$~GeV and two same flavour opposite sign leptons.
+%As discussed in Section~\ref{sec:results}, we see no event 
+%in the signal region, defined as $H_T>$350~GeV and 
+%$\MET>150$~GeV and two same flavour opposite sign leptons.
 
-The background prediction from the SM Monte Carlo is 
-0.77 $\pm$ 0.26 events, where the uncertainty comes from 
-the jet energy scale (30\%, see Section~\ref{sec:systematics}),
-the luminosity (11\%), and the lepton/trigger 
-efficiency (10\%)\footnote{Other uncertainties associated with 
-the modeling of $t\bar{t}$ in MadGraph have not been evaluated.}.
-The opposite flavor based background prediction is $0.9 {}_{-0.8}^{+ 2.2}$.
+%The background prediction from the SM Monte Carlo is 
+%0.77 $\pm$ 0.26 events, where the uncertainty comes from 
+%the jet energy scale (30\%, see Section~\ref{sec:systematics}),
+%the luminosity (11\%), and the lepton/trigger 
+%efficiency (10\%)\footnote{Other uncertainties associated with 
+%the modeling of $t\bar{t}$ in MadGraph have not been evaluated.}.
+%The opposite flavor based background prediction is $0.9 {}_{-0.8}^{+ 2.2}$.
 
-The background prediction is well in agreement with the prediction from
-simulation and with the observation of no events.
+%The background prediction is well in agreement with the prediction from
+%simulation and with the observation of no events.
 
-We calculate a Bayesian 95\% CL upper limit~\cite{bayes} 
-on the number of non SM events in this signal region to be 3.0.
+%We calculate a Bayesian 95\% CL upper limit~\cite{bayes} 
+%on the number of non SM events in this signal region to be 3.0.
 
-We cross-checked the code with a Bayesian 95\% CL upper limit using the MCMC calculator\cite{roostats} 
-and get the same result of 3.0.
+%We cross-checked the code with a Bayesian 95\% CL upper limit using the MCMC calculator\cite{roostats} 
+%and get the same result of 3.0.
 
-Here as well, we remind the reader of the number of expected
-LM0 and LM1 events from Table~\ref{tab:expect}: $7.3 \pm 1.6$ 
-events and $3.3 \pm 0.7$ respectively, where the uncertainties
-are from energy scale (Section~\ref{sec:systematics}), luminosity,
-and lepton efficiency.
+%Here as well, we remind the reader of the number of expected
+%LM0 and LM1 events from Table~\ref{tab:expect}: $7.3 \pm 1.6$ 
+%events and $3.3 \pm 0.7$ respectively, where the uncertainties
+%are from energy scale (Section~\ref{sec:systematics}), luminosity,
+%and lepton efficiency.
 
-We thus can exclude LM0 95\% confidence level.
+%We thus can exclude LM0 95\% confidence level.
