--- a/Notes/OSSummer2011/fakeratemethod.tex
+++ b/Notes/OSSummer2011/fakeratemethod.tex
@@ -24,10 +24,10 @@ Table \ref{tab:fakeYields} shows the number of expected background events in the
 \begin{tabular}{c||c|c|c} \hline
 Region   & $ee$ & $e\mu$ &  $\mu\mu$  \\
 lepton $\pT > (20, 10)~\GeV$  & & & \\\hline \hline
-$\HT > 100~\GeV, \MET > 100~\GeV$ &  0.68  & 9.26 & 1.01 \\
-$\HT > 350~\GeV, \MET > 150~\GeV$ &  0.14  & 0.52 & 0.07 \\
-$\HT > 600~\GeV, \MET > 100~\GeV$ &  0.05  & 0.25 & 0.01 \\
-$\HT > 250~\GeV, \MET > 250~\GeV$ &  0.00  & 0.31 & 0.01 \\\hline
+$\HT > 100~\GeV, \MET > 100~\GeV$ &  0.68  & 9.26?? & 1.01 \\
+$\HT > 350~\GeV, \MET > 150~\GeV$ &  0.14  & 0.52?? & 0.07 \\
+$\HT > 600~\GeV, \MET > 100~\GeV$ &  0.05  & 0.25?? & 0.01 \\
+$\HT > 250~\GeV, \MET > 250~\GeV$ &  0.00  & 0.31?? & 0.01 \\\hline
 \end{tabular}
 \end{center}
 \end{table}
