--- a/Notes/OSSummer2011/eventselection.tex
+++ b/Notes/OSSummer2011/eventselection.tex
@@ -5,30 +5,30 @@ the main backgrounds are
 \begin{description}
 \item[Top pairs] Top pair events are the dominant SM background to the search, 
     since they contain real opposite sign leptons, missing transverse energy and
-    a non negligible jet activity. This background is estimated by the opposite
+    a non negligible jet activity. This background is estimated by the different
     flavour subtraction.
 \item[Z+jets] Events with a $Z$ Boson contain two opposite sign leptons and 
     can contain a high jet activity, but the missing transverse energy is always
    instrumental and therefore the background can be reduced completely.
-   This backround can be estimated using the JZB method~\cite{kostas}
+   This background is estimated by extrapolation in \HT and \MET
    and is found to be very small in the signal region.
 \item[W+jets] Events with a $W$ Boson contain real missing transverse energy and
     can contain a high jet activity, but do only contain one lepton.
     Therefore the background can be measured using the fake lepton component.
-    This background is estimated by the isolation template method.
+    This background is estimated with a fake-rate method.
 \item[Diboson] Events with two gauge bosons do contribute to the background.
     Due to the low cross-section of the process their contribution is found
     to be negligible. This background is estimated from MC.
 \item[QCD] Although the di-jet cross-section is huge, this background is found to 
     be negligible in MC, since all cuts act very well on QCD (no isolated leptons,
     no missing transverse energy and  a steeply falling \HT distribution). 
-    This background is estimated by the isolation template method.
+    This background is estimated by the fake-rate method.
 \end{description}
 
 \subsection{Preselection}
 
-For now we select only events using the lepton trigger selection,
-but lower \pT leptons can be added without any changes to the 
+For the time being we select only events using the lepton trigger selection,
+but lower \pT leptons can be added without any major changes to the 
 presented methods.
 We start from a common preselection defined as
 \begin{itemize}
