--- a/Notes/OSSummer2011/signal.tex
+++ b/Notes/OSSummer2011/signal.tex
@@ -16,10 +16,10 @@ and is used as main event selection as described in Section~\ref{sec:eventselect
 Our signal region are defined as follows
 \begin{itemize}
 \item Two isolated opposite sign same flavour leptons within acceptance of $p_{T,1}>20$~GeV and $p_{T,2}>10$~GeV.
-\item The preselection region requires in addtion \HT > 100~GeV, $\MET>100$~GeV
-\item The 2010 signal region \HT > 350~GeV, $\MET>150$~GeV
-\item We define a high \HT signal region \HT > 600~GeV, $\MET>100$~GeV
-\item We define a high \MET signal region \HT > 250~GeV, $\MET>250$~GeV
+\item The preselection region requires in addtion $\HT > 100$~GeV, $\MET>100$~GeV
+\item The 2010 signal region $\HT > 350$~GeV, $\MET>150$~GeV
+\item We define a high \HT signal region $\HT > 600$~GeV, $\MET>100$~GeV
+\item We define a high \MET signal region $\HT > 250$~GeV, $\MET>250$~GeV
 \end{itemize}
 
 This definition is based on our prejudice of heavy objects
