--- a/Notes/OSSummer2011/ofossubtraction.tex
+++ b/Notes/OSSummer2011/ofossubtraction.tex
@@ -72,8 +72,8 @@ an extrapolation in \HT and \MET respectively.
 
 The extrapolation in \HT is performed fully data-driven
 by fitting the Z yield without \MET cut. For this
-we select events for \HT>100~GeV, \HT>250~GeV, \HT>350~GeV
-and \HT>600~GeV, which correspond to the \HT tresholds
+we select events for $\HT>100$~GeV, $\HT>250$~GeV, $\HT>350$~GeV
+and $\HT>600$~GeV, which correspond to the \HT tresholds
 used in various signal regions.
 By using the ratio of the yields
 in these regions we drive the efficiency of the \HT cut
@@ -81,7 +81,7 @@ in these regions we drive the efficiency of the \HT cut
     \epsilon_{\HT} = \frac{n_{Z,\HT,signal}}{n_{Z,\HT,control}}.
 \ee
 
-The yields and efficiencies for all regions are summarised in Tab.~\ref{zHTExtrap}.
+The yields and efficiencies for the \HT extrapolation in all regions are summarised in Tab.~\ref{zHTExtrap}.
 
 \begin{table}[hbtp]
 \caption{Z yield in. \label{tab:zHTExtrap}}
@@ -97,12 +97,12 @@ The yields and efficiencies for all regions are summarised in Tab.~\ref{zHTExtra
 \end{table}
 
 The extrapolation in \MET is performed 
-from simulation after applying the \MET
+using a scale factor from simulation after applying the \MET
 and \HT cut of the preselection.
 We find that suppression in \MET
 is reduced after application of a higher
-\HT selection, but the simulation is statistically
-limited in this region.
+\HT selection and the simulation is statistically
+limited in this region (will be reduced with Madgraph or Alpgen samples).
 The systematic uncertainty on this extrapolation
 is assumed to be 50\%.
 
@@ -116,7 +116,7 @@ selected according to simulation,
 thus we derive an upper limit on the number 
 of events in that region.
 
-Please note that this factor can also be
+Please note that the extrapolation factor can also be
 larger than one for a case where only
 the \HT but not the \MET cut is
 increased.
@@ -127,7 +127,7 @@ can be accommodated.
 
 \subsection{Preselection region}
 
-In the pre-selection region (\HT>100~GeV and \MET > 100~GeV)
+In the pre-selection region ($\HT>100$~GeV and $\MET > 100$~GeV)
 we perform a full shape analysis of the different ($e\mu$) an same flavour ($ee$, $\mu\mu$)
 lepton pairs.
 
